@@ -1,3 +1,8 @@
+2012-01-30  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/51641
+	* g++.dg/lookup/hidden-class17.C: New test.
+
 2012-01-30  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/52027
